--- a/index.html
+++ b/index.html
@@ -19,18 +19,30 @@
             <div class="rightContainer">
             <h2>Let's do this!</h2>
             <form id="form">
-                <label for="fname">FIRST NAME</label>
-                <input type="text" id="fname" name="first_name" required><br>
-                <label for="lname">LAST NAME</label>
-                <input type="text" id="lname" name="last_name" required><br>
-                <label for="email">EMAIL</label>
-                <input type="email" id="email" name="email" required autocomplete="off"><br>
-                <label for="phone">PHONE NUMBER</label>
-                <input type="tel" id="phone" name="phone_number" required pattern="^\d{10}$"><br>
-                <label for="password">PASSWORD</label>
-                <input type="password" id="password" name="password" required pattern="^(?=.*\d)(?=.*[\W_]).+$"><br>
-                <label for="cPassword">CONFIRM PASSWORD</label>
-                <input type="password" id="cPassword" name="confirm_password" required pattern="^(?=.*\d)(?=.*[\W_]).+$"><br>
+                <label for="fname">FIRST NAME
+                <input type="text" id="fname" name="first_name" required>
+                <div id="fNameJS"></div>
+                </label><br>
+                <label for="lname">LAST NAME
+                <input type="text" id="lname" name="last_name" required>
+                <div id="lNameJS"></div>
+                </label><br>
+                <label for="email">EMAIL
+                <input type="email" id="email" name="email" required autocomplete="off">
+                <div id="emailJS"></div>
+                </label><br>
+                <label for="phone">PHONE NUMBER
+                <input type="tel" id="phone" name="phone_number" required pattern="^\d{10}$">
+                <div id="phoneJS"></div>
+                </label><br>
+                <label for="password">PASSWORD
+                <input type="password" id="password" name="password" required pattern="^(?=.*\d)(?=.*[\W_]).+$">
+                <div id="passwordJS"></div>
+                </label><br>
+                <label for="cPassword">CONFIRM PASSWORD
+                <input type="password" id="cPassword" name="confirm_password" required pattern="^(?=.*\d)(?=.*[\W_]).+$">
+                <div id="cPasswordJS"></div>
+                </label><br>
             </form>
             <div class="submit">
                 <button type="submit" form="form">Create Account</button>
@@ -39,8 +51,6 @@
             </div>
         </div>
     </div>
-    <script>
-    </script>
-    
+    <script href="script.js"></script>  
 </body>
 </html>
