Adding a black semi-transparent background color that enhances the readability of the text against the busy background image.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="main">
         <div class="left">
             <div class="leftText">
-            <h3>In the middle of difficulty lies opportunity</h3>
-            <p>-Albert Einstein</p>
+            <h3>In the middle of difficulty lies opportunity.</h3>
+            <p>- Albert Einstein</p>
             </div>
         </div>
         <div class="right">
